--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@
 									<li><a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" class="button large">View Project</a></li>
 								</ul>
 							</article>
-<!--
-						-- Posts --
+
+						<!--- Posts -->
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="https://public.tableau.com/app/profile/dozie.chidiebere">Tableau Dashboards<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://public.tableau.com/app/profile/dozie.chidiebere" class="image fit"><img src="images/dashboard.jpg" alt="" /></a>
+									<p> Tableau Dashboards for various projects.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://public.tableau.com/app/profile/dozie.chidiebere" class="button">View Project</a></li>
 									</ul>
 								</article>
+<!--								
 								<article>
 									<header>
 										<span class="date">April 22, 2017</span>
