--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Dozie Chidiebere<br />
 						Portfolio</h1>
-						<p>Skilled Data Analyst skilled in SQL, Python, Power BI, Tableau and Excel <a href="https://www.linkedin.com/in/dozie-chidiebere-734690138/">@DozieChidiebere</a>
+						<p>Skilled Data Analyst skilled in SQL, Python, Power BI, Tableau and Excel <a href="https://www.linkedin.com/in/dozie-chidiebere-734690138/" target="_blank">@DozieChidiebere</a>
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -39,8 +39,8 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/dozie-chidiebere-734690138/" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/ziggyjnr/PortfolioProjects" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/dozie-chidiebere-734690138/" target="_blank" class="icon brands fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://github.com/ziggyjnr/PortfolioProjects" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -50,15 +50,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql">Data Exploration in SQL<br />
+									<h2><a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" target="_blank">Data Exploration in SQL<br />
 									</a></h2>
 									<p>In this project, I used SQL to explore the world's covid 19 dataset from 2020 till date. The dataset was gotten from 
 										"ourworldindata.org"
 									</p>
 								</header>
-								<a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" class="image main"><img src="images/covid.jpg" alt="" /></a>
+								<a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" target="_blank" class="image main"><img src="images/covid.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" class="button large">View Project</a></li>
+									<li><a href="https://github.com/ziggyjnr/PortfolioProjects/blob/main/Covid%20Portfolio%20Project.sql" target="_blank" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -66,28 +66,28 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/dozie.chidiebere">Tableau Dashboards<br />
+										<h2><a href="https://public.tableau.com/app/profile/dozie.chidiebere" target="_blank">Tableau Dashboards<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/dozie.chidiebere" class="image fit"><img src="images/dashboard.jpg" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/dozie.chidiebere" target="_blank" class="image fit"><img src="images/dashboard.jpg" alt="" /></a>
 									<p> Tableau Dashboards for various projects.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/dozie.chidiebere" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/dozie.chidiebere" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
-<!--								
+								
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="https://1drv.ms/u/s!AkCjdp4P6hQKiiu_ukBt9KlaviE3?e=vWKbKO" target="_blank">Microsoft Excel Projects<br />
+										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="https://1drv.ms/u/s!AkCjdp4P6hQKiiu_ukBt9KlaviE3?e=vWKbKO" target="_blank" class="image fit"><img src="images/excel.jpg" alt="" /></a>
+									<p>Interactive Excel dashboards and other data cleaning and exploration projects</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://1drv.ms/u/s!AkCjdp4P6hQKiiu_ukBt9KlaviE3?e=vWKbKO" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
+<!--
 								<article>
 									<header>
 										<span class="date">April 18, 2017</span>
@@ -152,13 +152,13 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">doziechidiebere@yahoo.com</a></p>
+								<p><a href="mailto:dozie.chidiebere@yahoo.com">dozie.chidiebere@yahoo.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/dozie-chidiebere-734690138/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-									<li><a href="https://github.com/ziggyjnr/PortfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/dozie-chidiebere-734690138/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://github.com/ziggyjnr/PortfolioProjects" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
